style: add text-foreground class to SVG elements for improved visibility

--- a/src/features/blog/content/chanhdai-brand.mdx
+++ b/src/features/blog/content/chanhdai-brand.mdx
@@ -10,7 +10,7 @@ updatedAt: 2025-06-01
 
 <figure>
   <svg
-    className="mx-auto h-auto w-1/3"
+    className="mx-auto h-auto w-1/3 text-foreground"
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
     viewBox="0 0 386 258"
@@ -30,7 +30,7 @@ updatedAt: 2025-06-01
 
 <figure>
   <svg
-    className="mx-auto h-auto w-full"
+    className="mx-auto h-auto w-full text-foreground"
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
     viewBox="0 0 1154 258"
@@ -52,7 +52,7 @@ Maintain a clear space of 1/2 the height of the Mark on all sides of the logo, e
 
 <figure>
   <svg
-    className="mx-auto h-auto w-1/3"
+    className="mx-auto h-auto w-1/3 text-foreground"
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
     viewBox="0 0 386 258"
@@ -83,7 +83,7 @@ Maintain a clear space of 1/2 the height of the Mark on all sides of the logo, e
 
 <figure>
   <svg
-    className="h-auto w-full"
+    className="h-auto w-full text-foreground"
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
     viewBox="0 0 1154 258"
