feat(next.config.ts): add permanent redirect for blog and components sections to improve URL consistency
feat(blog): add new content for "Apple Hello Effect" with detailed installation and usage instructions

--- a/src/features/blog/content/apple-hello-effect.mdx
+++ b/src/features/blog/content/apple-hello-effect.mdx
@@ -1,11 +1,11 @@
 ---
-title: Writing Effect inspired by Apple
+title: Apple Hello Effect
 description: Create a "Xin chào" and "Hello" writing effect inspired by Apple using Motion for React.
 image: https://assets.chanhdai.com/images/blog/writing-effect-inspired-by-apple.webp
 category: components
 icon: apple-hello-effect
 createdAt: 2025-03-08
-updatedAt: 2025-04-11
+updatedAt: 2025-12-10
 ---
 
 <ComponentPreview
