--- a/src/features/blog/content/apple-hello-effect.mdx
+++ b/src/features/blog/content/apple-hello-effect.mdx
@@ -9,12 +9,14 @@ updatedAt: 2025-12-10
 ---
 
 <ComponentPreview
+  className="text-foreground"
   name="apple-hello-effect-vi-demo"
   openInV0Url="https://chanhdai.com/r/apple-hello-effect.json"
   canReplay
 />
 
 <ComponentPreview
+  className="text-foreground"
   name="apple-hello-effect-en-demo"
   openInV0Url="https://chanhdai.com/r/apple-hello-effect.json"
   canReplay
