feat(consent-manager.mdx): add testimonial quote from Christopher Burns to enhance documentation and user engagement

--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -14,6 +14,10 @@ updatedAt: 2025-12-16
   title="Consent Manager Demo"
 />
 
+> "This is super cool, Full circle moment (the prototype for c15t actually used shadcn).<br/>
+> Would love to get this in our docs also and shared in our discord!"<br/>
+> — [Christopher Burns](https://x.com/BurnedChris/status/2000947403571204445), Creator of [c15t.com](https://c15t.com)
+
 ## About
 
 - Built on top of [c15t](https://c15t.com/docs/frameworks/next/quickstart).
