--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -10,6 +10,7 @@ updatedAt: 2025-12-16
 ---
 
 <IframeEmbed
+  className="aspect-3/4 sm:aspect-square md:aspect-video"
   src="https://react-wheel-picker.chanhdai.com/docs/getting-started"
   title="Consent Manager Demo"
 />
