--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -82,7 +82,7 @@ npm install clsx tailwind-merge @c15t/nextjs
 
 Wrap your app with the `ConsentManager` component:
 
-```tsx title="app/layout.tsx" showLineNumbers {1,11-13}
+```tsx title="app/layout.tsx" showLineNumbers {1,7}
 import { ConsentManager } from "@/components/ncdai/consent-manager";
 
 export default function Layout({ children }: { children: React.ReactNode }) {
