feat(consent-manager): add ConsentManagerClient component for client-side consent management

--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -70,6 +70,12 @@ npm install clsx tailwind-merge @c15t/nextjs
   showLineNumbers
 />
 
+<ComponentSource
+  src="src/registry/consent-manager/consent-manager-client.tsx"
+  title="components/ncdai/consent-manager-client.tsx"
+  showLineNumbers
+/>
+
 <Step>Update the import paths to match your project setup</Step>
 
 </Steps>
