--- a/src/features/blog/content/slide-to-unlock.mdx
+++ b/src/features/blog/content/slide-to-unlock.mdx
@@ -15,8 +15,29 @@ updatedAt: 2025-11-23
   remountOnThemeChange
 />
 
-> "awesome. Love the components, especially slide-to-unlock. Great job"<br/>
-> — [Guillermo Rauch](https://x.com/rauchg/status/1978913158514237669), CEO & Founder at [Vercel](https://vercel.com)
+<a
+  href="https://x.com/rauchg/status/1978913158514237669"
+  target="_blank"
+  rel="noopener noreferrer"
+  className="not-prose block h-full rounded-xl border transition-[background-color] ease-out hover:bg-accent2"
+>
+  <Testimonial>
+    <TestimonialQuote className="not-italic">
+      <p>awesome. Love the components, especially slide-to-unlock. Great job</p>
+    </TestimonialQuote>
+
+    <TestimonialAuthor>
+      <TestimonialAvatar>
+        <TestimonialAvatarImg src="https://pbs.twimg.com/profile_images/1783856060249595904/8TfcCN0r_400x400.jpg" alt="Guillermo Rauch" />
+        <TestimonialAvatarRing />
+      </TestimonialAvatar>
+
+      <TestimonialAuthorName>Guillermo Rauch</TestimonialAuthorName>
+      <TestimonialAuthorBio>CEO @Vercel</TestimonialAuthorBio>
+    </TestimonialAuthor>
+
+  </Testimonial>
+</a>
 
 ## Installation
 
