feat(mdx): add TestimonialVerifiedBadge component to enhance testimonial credibility
Add TestimonialVerifiedBadge to testimonial author names in consent-manager.mdx and slide-to-unlock.mdx to indicate verified authors.

--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -33,7 +33,7 @@ updatedAt: 2025-12-16
         <TestimonialAvatarRing />
       </TestimonialAvatar>
 
-      <TestimonialAuthorName>Christopher Burns</TestimonialAuthorName>
+      <TestimonialAuthorName>Christopher Burns<TestimonialVerifiedBadge/></TestimonialAuthorName>
       <TestimonialAuthorBio>Creator of c15t.com</TestimonialAuthorBio>
     </TestimonialAuthor>
 
