--- a/src/features/blog/content/slide-to-unlock.mdx
+++ b/src/features/blog/content/slide-to-unlock.mdx
@@ -32,7 +32,7 @@ updatedAt: 2025-11-23
         <TestimonialAvatarRing />
       </TestimonialAvatar>
 
-      <TestimonialAuthorName>Guillermo Rauch</TestimonialAuthorName>
+      <TestimonialAuthorName>Guillermo Rauch<TestimonialVerifiedBadge/></TestimonialAuthorName>
       <TestimonialAuthorBio>CEO @Vercel</TestimonialAuthorBio>
     </TestimonialAuthor>
 
