refactor(testimonials): rename TestimonialAuthorBio to TestimonialAuthorTagline
Change the component and variable name from TestimonialAuthorBio to
TestimonialAuthorTagline to better reflect its purpose as a short
tagline or title rather than a biography. This improves clarity and
consistency across the codebase.

--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -34,7 +34,7 @@ updatedAt: 2025-12-16
       </TestimonialAvatar>
 
       <TestimonialAuthorName>Christopher Burns<TestimonialVerifiedBadge/></TestimonialAuthorName>
-      <TestimonialAuthorBio>Creator of c15t.com</TestimonialAuthorBio>
+      <TestimonialAuthorTagline>Creator of c15t.com</TestimonialAuthorTagline>
     </TestimonialAuthor>
 
   </Testimonial>
