--- a/src/features/blog/content/slide-to-unlock.mdx
+++ b/src/features/blog/content/slide-to-unlock.mdx
@@ -33,7 +33,7 @@ updatedAt: 2025-11-23
       </TestimonialAvatar>
 
       <TestimonialAuthorName>Guillermo Rauch<TestimonialVerifiedBadge/></TestimonialAuthorName>
-      <TestimonialAuthorBio>CEO @Vercel</TestimonialAuthorBio>
+      <TestimonialAuthorTagline>CEO @Vercel</TestimonialAuthorTagline>
     </TestimonialAuthor>
 
   </Testimonial>
