--- a/src/features/blog/content/testimonials-marquee.mdx
+++ b/src/features/blog/content/testimonials-marquee.mdx
@@ -83,7 +83,7 @@ import {
 import {
   Testimonial,
   TestimonialAuthor,
-  TestimonialAuthorBio,
+  TestimonialAuthorTagline,
   TestimonialAuthorInfo,
   TestimonialAuthorName,
   TestimonialAvatar,
@@ -114,7 +114,7 @@ import {
             <TestimonialVerifiedBadge />
           </TestimonialAuthorName>
 
-          <TestimonialAuthorBio />
+          <TestimonialAuthorTagline />
         </TestimonialAuthor>
       </Testimonial>
     </MarqueeItem>
