fix(readme): update image versions for consistency in screenshots fix(welcome): update image URL and modified updatedAt date for accuracy fix(user): change ogImage URL for improved dark mode representation

--- a/src/features/blog/content/welcome.mdx
+++ b/src/features/blog/content/welcome.mdx
@@ -1,9 +1,9 @@
 ---
 title: Welcome to chanhdai.com
 description: A minimal, pixel-perfect dev portfolio, component registry, and blog to showcase my work as a Design Engineer.
-image: https://assets.chanhdai.com/images/blog/welcome.webp
+image: https://assets.chanhdai.com/images/blog/welcome.webp?v=2
 createdAt: 2025-02-14
-updatedAt: 2025-07-20
+updatedAt: 2026-01-25
 ---
 
 ## Tech Stack
