fix: update hover background color to accent-muted for consistency across components

--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -19,7 +19,7 @@ updatedAt: 2025-12-16
   href="https://x.com/BurnedChris/status/2000947403571204445"
   target="_blank"
   rel="noopener noreferrer"
-  className="not-prose block h-full rounded-xl border ring-1 ring-edge ring-offset-2 ring-offset-background transition-[background-color] ease-out hover:bg-accent2"
+  className="not-prose block h-full rounded-xl border ring-1 ring-edge ring-offset-2 ring-offset-background transition-[background-color] ease-out hover:bg-accent-muted"
 >
   <Testimonial>
     <TestimonialQuote className="not-italic">
