--- a/src/features/blog/content/slide-to-unlock.mdx
+++ b/src/features/blog/content/slide-to-unlock.mdx
@@ -19,7 +19,7 @@ updatedAt: 2025-11-23
   href="https://x.com/rauchg/status/1978913158514237669"
   target="_blank"
   rel="noopener noreferrer"
-  className="not-prose block h-full rounded-xl border ring-1 ring-edge ring-offset-2 ring-offset-background transition-[background-color] ease-out hover:bg-accent2"
+  className="not-prose block h-full rounded-xl border ring-1 ring-edge ring-offset-2 ring-offset-background transition-[background-color] ease-out hover:bg-accent-muted"
 >
   <Testimonial>
     <TestimonialQuote className="not-italic">
