Remove deprecated blocks and their associated files from the registry, including wheel-picker, work-experience, testimonials-marquee, shimmering-text, and slide-to-unlock components. Update references in blog content to point to the new unified component URLs.

--- a/src/features/blog/content/react-wheel-picker.mdx
+++ b/src/features/blog/content/react-wheel-picker.mdx
@@ -10,7 +10,7 @@ updatedAt: 2025-10-09
 
 <ComponentPreview
   name="wheel-picker-demo"
-  openInV0Url="https://chanhdai.com/r/wheel-picker-block-01.json"
+  openInV0Url="https://chanhdai.com/r/wheel-picker.json"
   codeCollapsible
 />
 
@@ -123,7 +123,7 @@ See the [React Wheel Picker](https://react-wheel-picker.chanhdai.com/docs/gettin
 <ComponentPreview
   className="mt-4"
   name="wheel-picker-demo"
-  openInV0Url="https://chanhdai.com/r/wheel-picker-block-01.json"
+  openInV0Url="https://chanhdai.com/r/wheel-picker.json"
   codeCollapsible
 />
 
@@ -132,6 +132,6 @@ See the [React Wheel Picker](https://react-wheel-picker.chanhdai.com/docs/gettin
 <ComponentPreview
   className="mt-4"
   name="wheel-picker-form-demo"
-  openInV0Url="https://chanhdai.com/r/wheel-picker-block-02.json"
+  openInV0Url="https://chanhdai.com/r/wheel-picker.json"
   codeCollapsible
 />
