--- a/src/features/blog/content/scroll-fade-effect.mdx
+++ b/src/features/blog/content/scroll-fade-effect.mdx
@@ -11,7 +11,7 @@ updatedAt: 2025-12-09
 
 <ComponentPreview
   name="scroll-fade-effect-demo-01"
-  openInV0Url="https://chanhdai.com/r/scroll-fade-effect-block-01.json"
+  openInV0Url="https://chanhdai.com/r/scroll-fade-effect.json"
 />
 
 ## Features
@@ -105,27 +105,15 @@ import { ScrollFadeEffect } from "@/components/ncdai/scroll-fade-effect";
 
 ### Horizontal Scrolling
 
-<ComponentPreview
-  name="scroll-fade-effect-demo-02"
-  openInV0Url="https://chanhdai.com/r/scroll-fade-effect-block-02.json"
-  data-code-meta="{28}"
-/>
+<ComponentPreview name="scroll-fade-effect-demo-02" data-code-meta="{28}" />
 
 ### shadcn/ui Scroll Area
 
-<ComponentPreview
-  name="scroll-fade-effect-demo-03"
-  openInV0Url="https://chanhdai.com/r/scroll-fade-effect-block-03.json"
-  data-code-meta="{16}"
-/>
+<ComponentPreview name="scroll-fade-effect-demo-03" data-code-meta="{16}" />
 
 ### shadcn/ui Scroll Area – Horizontal Scrolling
 
-<ComponentPreview
-  name="scroll-fade-effect-demo-04"
-  openInV0Url="https://chanhdai.com/r/scroll-fade-effect-block-04.json"
-  data-code-meta="{31}"
-/>
+<ComponentPreview name="scroll-fade-effect-demo-04" data-code-meta="{31}" />
 
 ## References
 
