--- a/src/features/blog/content/slide-to-unlock.mdx
+++ b/src/features/blog/content/slide-to-unlock.mdx
@@ -10,7 +10,7 @@ updatedAt: 2025-11-23
 
 <ComponentPreview
   name="slide-to-unlock-demo-01"
-  openInV0Url="https://chanhdai.com/r/slide-to-unlock-block-01.json"
+  openInV0Url="https://chanhdai.com/r/slide-to-unlock.json"
   codeCollapsible
   remountOnThemeChange
 />
@@ -174,7 +174,6 @@ An animated text component that creates a shimmering effect by sequentially anim
 <ComponentPreview
   className="mt-4"
   name="slide-to-unlock-demo-01"
-  openInV0Url="https://chanhdai.com/r/slide-to-unlock-block-01.json"
   codeCollapsible
   remountOnThemeChange
 />
@@ -184,7 +183,6 @@ An animated text component that creates a shimmering effect by sequentially anim
 <ComponentPreview
   className="mt-4"
   name="slide-to-unlock-demo-02"
-  openInV0Url="https://chanhdai.com/r/slide-to-unlock-block-02.json"
   codeCollapsible
   remountOnThemeChange
 />
@@ -194,7 +192,6 @@ An animated text component that creates a shimmering effect by sequentially anim
 <ComponentPreview
   className="mt-4"
   name="slide-to-unlock-demo-03"
-  openInV0Url="https://chanhdai.com/r/slide-to-unlock-block-03.json"
   codeCollapsible
   remountOnThemeChange
 />
