--- a/src/features/blog/content/work-experience-component.mdx
+++ b/src/features/blog/content/work-experience-component.mdx
@@ -11,7 +11,7 @@ updatedAt: 2025-12-27
 <ComponentPreview
   className="**:data-[slot=component-preview]:min-h-0"
   name="work-experience-demo"
-  openInV0Url="https://chanhdai.com/r/work-experience-block-01.json"
+  openInV0Url="https://chanhdai.com/r/work-experience.json"
   notProse={false}
   codeCollapsible
 />
@@ -169,13 +169,3 @@ type ExperienceItemType = {
   isCurrentEmployer?: boolean;
 };
 ```
-
-## Examples
-
-<ComponentPreview
-  className="**:data-[slot=component-preview]:min-h-0"
-  name="work-experience-demo"
-  openInV0Url="https://chanhdai.com/r/work-experience-block-01.json"
-  notProse={false}
-  codeCollapsible
-/>
