--- a/src/features/blog/content/shimmering-text.mdx
+++ b/src/features/blog/content/shimmering-text.mdx
@@ -10,7 +10,7 @@ updatedAt: 2025-11-23
 
 <ComponentPreview
   name="shimmering-text-demo-01"
-  openInV0Url="https://chanhdai.com/r/shimmering-text-block-01.json"
+  openInV0Url="https://chanhdai.com/r/shimmering-text.json"
   remountOnThemeChange
 />
 
@@ -77,11 +77,7 @@ import { ShimmeringText } from "@/components/ncdai/shimmering-text";
 
 ### Custom Color
 
-<ComponentPreview
-  name="shimmering-text-demo-02"
-  openInV0Url="https://chanhdai.com/r/shimmering-text-block-02.json"
-  remountOnThemeChange
-/>
+<ComponentPreview name="shimmering-text-demo-02" remountOnThemeChange />
 
 CSS Variables explanation:
 
