fix: update IframeEmbed source URL in Consent Manager documentation

--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -11,7 +11,7 @@ updatedAt: 2025-12-16
 
 <IframeEmbed
   className="aspect-3/4 sm:aspect-square md:aspect-video"
-  src="https://react-wheel-picker.chanhdai.com/docs/getting-started"
+  src="https://react-wheel-picker.chanhdai.com/sponsors"
   title="Consent Manager Demo"
 />
 
