--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -22,7 +22,7 @@ updatedAt: 2025-12-16
   className="not-prose block h-full rounded-xl border ring-1 ring-edge ring-offset-2 ring-offset-background transition-[background-color] ease-out hover:bg-accent-muted"
 >
   <Testimonial>
-    <TestimonialQuote className="not-italic">
+    <TestimonialQuote>
       <p>This is super cool, Full circle moment (the prototype for c15t actually used shadcn).</p>
       <p>Would love to get this in our docs also and shared in our discord!</p>
     </TestimonialQuote>
