feat: add keyboard navigation and type-ahead search support to Wheel Picker component documentation

--- a/src/features/blog/content/react-wheel-picker.mdx
+++ b/src/features/blog/content/react-wheel-picker.mdx
@@ -22,6 +22,7 @@ The Wheel Picker component is built on top of [React Wheel Picker](https://react
 - 🖱️ Mouse drag and scroll support for desktop
 - 🔄 Infinite loop scrolling
 - 🎨 Unstyled components for complete style customization
+- ⌨️ Full keyboard navigation and type-ahead search
 - ⚡️ Easy installation via shadcn CLI
 
 ## Installation
