--- a/src/features/blog/content/testimonials-marquee.mdx
+++ b/src/features/blog/content/testimonials-marquee.mdx
@@ -51,8 +51,8 @@ npm install clsx tailwind-merge react-fast-marquee
 <Step>Copy and paste the following code into your project</Step>
 
 <ComponentSource
-  name="testimonials-marquee"
-  title="components/ncdai/testimonials-marquee.tsx"
+  name="testimonial"
+  title="components/ncdai/testimonial.tsx"
   showLineNumbers
 />
 
@@ -91,7 +91,7 @@ import {
   TestimonialAvatarRing,
   TestimonialQuote,
   TestimonialVerifiedBadge,
-} from "@/components/ncdai/testimonials-marquee"
+} from "@/components/ncdai/testimonial"
 ```
 
 ```tsx
