fix: update yarn command to use 'yarn' instead of 'npx' in multiple components

--- a/src/features/blog/content/code-block-command.mdx
+++ b/src/features/blog/content/code-block-command.mdx
@@ -85,7 +85,7 @@ import { CodeBlockCommand } from "@/components/ncdai/code-block-command"
 ```tsx
 <CodeBlockCommand
   pnpm="pnpm dlx shadcn add @ncdai/code-block-command"
-  yarn="npx shadcn add @ncdai/code-block-command"
+  yarn="yarn shadcn add @ncdai/code-block-command"
   npm="npx shadcn add @ncdai/code-block-command"
   bun="bunx --bun shadcn add @ncdai/code-block-command"
 />
