chore: update @ncdai/react-wheel-picker to version 1.2.0 and enhance styling options
- Updated package version in package.json and pnpm-lock.yaml.
- Modified wheel-picker component to include new class names for better styling.
- Added disabled state for options in demo and documentation.
- Updated last modified date in documentation.

--- a/src/features/blog/content/react-wheel-picker.mdx
+++ b/src/features/blog/content/react-wheel-picker.mdx
@@ -5,7 +5,7 @@ image: https://assets.chanhdai.com/images/blog/react-wheel-picker.webp?t=1747747
 category: components
 icon: react-wheel-picker
 createdAt: 2025-05-16
-updatedAt: 2025-10-09
+updatedAt: 2026-02-08
 ---
 
 <ComponentPreview
@@ -97,6 +97,7 @@ const options: WheelPickerOption[] = [
   {
     label: "Angular",
     value: "angular",
+    disabled: true,
   },
   {
     label: "Svelte",
