fix: update installation command to include 'jotai' dependency

--- a/src/features/blog/content/code-block-command.mdx
+++ b/src/features/blog/content/code-block-command.mdx
@@ -42,7 +42,7 @@ npx shadcn add @ncdai/code-block-command
 <Step>Install the following dependencies</Step>
 
 ```bash
-npm install clsx tailwind-merge class-variance-authority lucide-react motion radix-ui @base-ui/react
+npm install clsx tailwind-merge class-variance-authority lucide-react motion jotai radix-ui @base-ui/react
 ```
 
 <Step>Add a cn helper</Step>
