fix(testimonials): update author avatars and URLs for consistency

--- a/src/features/blog/content/testimonials-marquee.mdx
+++ b/src/features/blog/content/testimonials-marquee.mdx
@@ -119,6 +119,9 @@ import {
       </Testimonial>
     </MarqueeItem>
     ...
+    <MarqueeItem />
+    <MarqueeItem />
+    <MarqueeItem />
   </MarqueeContent>
 </Marquee>
 ```
