--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -29,7 +29,7 @@ updatedAt: 2025-12-16
 
     <TestimonialAuthor>
       <TestimonialAvatar>
-        <TestimonialAvatarImg src="https://pbs.twimg.com/profile_images/1988259821020221440/qRyYd6iE_400x400.jpg" alt="Christopher Burns" />
+        <TestimonialAvatarImg src="https://unavatar.io/x/BurnedChris" alt="Christopher Burns" />
         <TestimonialAvatarRing />
       </TestimonialAvatar>
 
@@ -92,7 +92,7 @@ npm install clsx tailwind-merge @c15t/nextjs
 />
 
 <ComponentSource
-  src="src/registry/consent-manager/consent-manager-client.tsx"
+  src="src/registry/components/consent-manager/consent-manager-client.tsx"
   title="components/ncdai/consent-manager-client.tsx"
   showLineNumbers
 />
