--- a/src/features/blog/content/code-block-command.mdx
+++ b/src/features/blog/content/code-block-command.mdx
@@ -57,14 +57,26 @@ npm install clsx tailwind-merge class-variance-authority lucide-react motion jot
 <Step>Copy and paste the following code into your project</Step>
 
 <ComponentSource
+  src="src/components/base/ui/tabs.tsx"
+  title="components/ncdai/base/tabs.tsx"
+  showLineNumbers
+/>
+
+<ComponentSource
   src="src/components/ui/button.tsx"
   title="components/ui/button.tsx"
   showLineNumbers
 />
 
 <ComponentSource
-  src="src/components/base/ui/tabs.tsx"
-  title="components/ncdai/base/tabs.tsx"
+  src="src/hooks/use-copy-to-clipboard.ts"
+  title="hooks/use-copy-to-clipboard.ts"
+  showLineNumbers
+/>
+
+<ComponentSource
+  name="copy-button"
+  title="components/ncdai/copy-button.tsx"
   showLineNumbers
 />
 
@@ -107,14 +119,14 @@ import { CodeBlockCommand } from "@/components/ncdai/code-block-command"
 
 ### Props
 
-| Prop          | Type                                                                  | Description                                               |
-| ------------- | --------------------------------------------------------------------- | --------------------------------------------------------- |
-| `pnpm`        | `string`                                                              | Command for pnpm package manager                          |
-| `yarn`        | `string`                                                              | Command for yarn package manager                          |
-| `npm`         | `string`                                                              | Command for npm package manager                           |
-| `bun`         | `string`                                                              | Command for bun package manager                           |
-| `onCopy`      | `(data: { packageManager: PackageManager; command: string }) => void` | Callback when command is successfully copied to clipboard |
-| `onCopyError` | `(error: Error) => void`                                              | Callback when copy operation fails                        |
+| Prop            | Type                                                                  | Description                                               |
+| --------------- | --------------------------------------------------------------------- | --------------------------------------------------------- |
+| `pnpm`          | `string`                                                              | Command for pnpm package manager                          |
+| `yarn`          | `string`                                                              | Command for yarn package manager                          |
+| `npm`           | `string`                                                              | Command for npm package manager                           |
+| `bun`           | `string`                                                              | Command for bun package manager                           |
+| `onCopySuccess` | `(data: { packageManager: PackageManager; command: string }) => void` | Callback when command is successfully copied to clipboard |
+| `onCopyError`   | `(error: Error) => void`                                              | Callback when copy operation fails                        |
 
 ### Types
 
@@ -141,7 +153,7 @@ export function InstallCommand() {
       yarn="yarn shadcn add @ncdai/code-block-command"
       npm="npx shadcn add @ncdai/code-block-command"
       bun="bunx --bun shadcn add @ncdai/code-block-command"
-      onCopy={({ packageManager, command }) => {
+      onCopySuccess={({ packageManager, command }) => {
         trackEvent({
           name: "command_copied",
           properties: {
