refactor(copy-button): remove redundant CopyButton section from API reference and update documentation link

--- a/src/features/blog/content/copy-button.mdx
+++ b/src/features/blog/content/copy-button.mdx
@@ -95,8 +95,6 @@ import { CopyButton } from "@/components/ncdai/copy-button"
 
 ## API Reference
 
-### CopyButton
-
 Extends [Button](https://ui.shadcn.com/docs/components/radix/button) with clipboard functionality. Accepts all Button props plus:
 
 | Prop            | Type                       | Description                                                                         |
@@ -105,4 +103,4 @@ Extends [Button](https://ui.shadcn.com/docs/components/radix/button) with clipbo
 | `onCopySuccess` | `(text: string) => void`   | Optional callback function called when copy succeeds. Receives the copied text.     |
 | `onCopyError`   | `(error: Error) => void`   | Optional callback function called when copy fails. Receives the error object.       |
 
-See [Button API Reference](https://ui.shadcn.com/docs/components/radix/button#api-reference) for additional props.
+See [shadcn/ui](https://ui.shadcn.com/docs/components/radix/button#api-reference) documentation for more information.
