feat: update component documentation and API references for multiple components, including AppleHelloEffect, CopyButton, GitHubStars, ScrollFadeEffect, ShimmeringText, and SlideToUnlock

--- a/src/features/blog/content/apple-hello-effect.mdx
+++ b/src/features/blog/content/apple-hello-effect.mdx
@@ -5,7 +5,7 @@ image: https://assets.chanhdai.com/images/blog/writing-effect-inspired-by-apple.
 category: components
 icon: apple-hello-effect
 createdAt: 2025-03-08
-updatedAt: 2025-12-10
+updatedAt: 2026-02-20
 ---
 
 <ComponentPreview
@@ -85,12 +85,21 @@ import {
 <AppleHelloEnglishEffect />
 ```
 
-## Props
+## API Reference
 
-| Prop                  | Type         | Default     | Description                                                                                |
-| --------------------- | ------------ | ----------- | ------------------------------------------------------------------------------------------ |
-| `speed`               | `number`     | 1           | A multiplier that affects the animation duration. Higher values make the animation slower. |
-| `onAnimationComplete` | `() => void` | `undefined` | Callback function triggered when the animation completes.                                  |
+### AppleHelloVietnameseEffect
+
+<AutoTypeTable
+  path="src/registry/components/apple-hello-effect/apple-hello-effect.tsx"
+  name="AppleHelloEffectOwnProps"
+/>
+
+### AppleHelloEnglishEffect
+
+<AutoTypeTable
+  path="src/registry/components/apple-hello-effect/apple-hello-effect.tsx"
+  name="AppleHelloEffectOwnProps"
+/>
 
 ## Acknowledgments
 
