--- a/src/features/blog/content/scroll-fade-effect.mdx
+++ b/src/features/blog/content/scroll-fade-effect.mdx
@@ -5,7 +5,7 @@ image: https://assets.chanhdai.com/images/blog/scroll-fade-effect.webp
 category: components
 icon: scroll-fade-effect
 createdAt: 2025-12-08
-updatedAt: 2025-12-09
+updatedAt: 2026-02-20
 ---
 
 <ComponentPreview
@@ -99,6 +99,15 @@ import { ScrollFadeEffect } from "@/components/ncdai/scroll-fade-effect"
   </ScrollFadeEffect>
 </div>
 ```
+
+## API Reference
+
+### ScrollFadeEffect
+
+<AutoTypeTable
+  path="src/registry/components/scroll-fade-effect/scroll-fade-effect.tsx"
+  name="ScrollFadeEffectOwnProps"
+/>
 
 ## Examples
 
