--- a/src/features/blog/content/shimmering-text.mdx
+++ b/src/features/blog/content/shimmering-text.mdx
@@ -5,7 +5,7 @@ image: https://assets.chanhdai.com/images/blog/shimmering-text.webp
 category: components
 icon: shimmering-text
 createdAt: 2025-11-02
-updatedAt: 2025-11-23
+updatedAt: 2026-02-20
 ---
 
 <ComponentPreview
@@ -72,6 +72,15 @@ import { ShimmeringText } from "@/components/ncdai/shimmering-text"
 ```tsx
 <ShimmeringText text="slide to unlock" />
 ```
+
+## API Reference
+
+### ShimmeringText
+
+<AutoTypeTable
+  path="src/registry/components/shimmering-text/shimmering-text.tsx"
+  name="ShimmeringTextOwnProps"
+/>
 
 ## Examples
 
