--- a/src/features/blog/content/work-experience.mdx
+++ b/src/features/blog/content/work-experience.mdx
@@ -5,7 +5,7 @@ image: https://assets.chanhdai.com/images/blog/work-experience-component.webp?t=
 category: components
 icon: work-experience
 createdAt: 2025-06-16
-updatedAt: 2026-02-12
+updatedAt: 2026-02-20
 ---
 
 <ComponentPreview
@@ -91,49 +91,23 @@ const experiences: ExperienceItemType[] = []
 
 ## API Reference
 
-### Props
+### WorkExperience
 
-Props for the `WorkExperience` component:
+<AutoTypeTable
+  path="src/registry/components/work-experience/work-experience.tsx"
+  name="WorkExperienceProps"
+/>
 
-| Prop          | Type                   | Description                                                                                          |
-| ------------- | ---------------------- | ---------------------------------------------------------------------------------------------------- |
-| `experiences` | `ExperienceItemType[]` | An array of work experience items to display. Each item includes company details and positions held. |
-| `className`   | `string`               | Additional CSS classes to apply to the root element.                                                 |
+### ExperienceItemType
 
-### Types
+<AutoTypeTable
+  path="src/registry/components/work-experience/work-experience.tsx"
+  name="ExperienceItemType"
+/>
 
-```ts
-type ExperiencePositionIconType = "design" | "code" | "business" | "education"
+### ExperiencePositionItemType
 
-type ExperiencePositionItemType = {
-  /** Unique identifier for the position */
-  id: string
-  /** The job title or position name */
-  title: string
-  /** The period during which the position was held (e.g., "Jan 2020 - Dec 2021") */
-  employmentPeriod: string
-  /** The type of employment (e.g., "Full-time", "Part-time", "Contract") */
-  employmentType?: string
-  /** A brief description of the position or responsibilities */
-  description?: string
-  /** An icon representing the position */
-  icon?: ExperiencePositionIconType
-  /** A list of skills associated with the position */
-  skills?: string[]
-  /** Indicates if the position details are expanded in the UI */
-  isExpanded?: boolean
-}
-
-type ExperienceItemType = {
-  /** Unique identifier for the experience item */
-  id: string
-  /** Name of the company where the experience was gained */
-  companyName: string
-  /** URL or path to the company's logo image */
-  companyLogo?: string
-  /** List of positions held at the company */
-  positions: ExperiencePositionItemType[]
-  /** Indicates if this is the user's current employer */
-  isCurrentEmployer?: boolean
-}
-```
+<AutoTypeTable
+  path="src/registry/components/work-experience/work-experience.tsx"
+  name="ExperiencePositionItemType"
+/>
