--- a/src/features/blog/content/github-stars.mdx
+++ b/src/features/blog/content/github-stars.mdx
@@ -5,7 +5,7 @@ image: https://assets.chanhdai.com/images/blog/github-stars.webp
 category: components
 icon: github-stars
 createdAt: 2025-11-16
-updatedAt: 2025-11-16
+updatedAt: 2026-02-20
 ---
 
 <ComponentPreview
@@ -69,6 +69,15 @@ import { GithubStars } from "@/components/ncdai/github-stars"
 ```tsx
 <GithubStars repo="ncdai/chanhdai.com" stargazersCount={1050} />
 ```
+
+## API Reference
+
+### GitHubStars
+
+<AutoTypeTable
+  path="src/registry/components/github-stars/github-stars.tsx"
+  name="GitHubStarsProps"
+/>
 
 ## Examples
 
