--- a/src/features/blog/content/text-flip.mdx
+++ b/src/features/blog/content/text-flip.mdx
@@ -6,7 +6,7 @@ category: components
 icon: text-flip
 new: true
 createdAt: 2026-02-19
-updatedAt: 2026-02-19
+updatedAt: 2026-02-20
 ---
 
 <ComponentPreview
@@ -79,24 +79,9 @@ import { TextFlip } from "@/components/ncdai/text-flip"
 
 ## API Reference
 
-| Prop            | Type                      | Default             | Description                                                  |
-| --------------- | ------------------------- | ------------------- | ------------------------------------------------------------ |
-| `as`            | `MotionElement`           | `motion.p`          | The motion element type to render.                           |
-| `className`     | `string`                  |                     | Additional CSS classes applied to the rendered element.      |
-| `children`      | `ReactNode[]`             |                     | List of items to cycle through.                              |
-| `interval`      | `number`                  | `2`                 | Time in seconds between each flip.                           |
-| `transition`    | `Transition`              | `defaultTransition` | Motion transition config for the flip animation.             |
-| `variants`      | `Variants`                | `defaultVariants`   | Motion variants for `initial`, `animate`, and `exit` states. |
-| `onIndexChange` | `(index: number) => void` |                     | Callback fired whenever the active item index changes.       |
+### TextFlip
 
-```tsx
-const defaultTransition = {
-  duration: 0.3,
-}
-
-const defaultVariants = {
-  initial: { y: -8, opacity: 0 },
-  animate: { y: 0, opacity: 1 },
-  exit: { y: 8, opacity: 0 },
-}
-```
+<AutoTypeTable
+  path="src/registry/components/text-flip/text-flip.tsx"
+  name="TextFlipProps"
+/>
