fix: add duration prop to ChevronsDownUpIcon and update related components for consistent animation timing

--- a/src/features/blog/content/work-experience.mdx
+++ b/src/features/blog/content/work-experience.mdx
@@ -13,6 +13,7 @@ updatedAt: 2026-02-20
   name="work-experience-demo"
   openInV0Url="https://chanhdai.com/r/work-experience.json"
   codeCollapsible
+  prose
 />
 
 ## Installation
