feat: add ncdai-writing-component-docs skill and update component descriptions
- Introduced a new skill for writing and reviewing component documentation.
- Updated descriptions for various components in the registry to enhance clarity and consistency, including:
  - Apple Hello Effect
  - Code Block Command
  - Consent Manager
  - GitHub Stars
  - Scroll Fade Effect
  - Shimmering Text
  - Slide to Unlock
  - Testimonial
  - Testimonials Marquee
  - Text Flip
  - Theme Switcher
  - Work Experience

--- a/src/features/blog/content/apple-hello-effect.mdx
+++ b/src/features/blog/content/apple-hello-effect.mdx
@@ -1,6 +1,6 @@
 ---
 title: Apple Hello Effect
-description: Create a "Xin chào" and "Hello" writing effect inspired by Apple using Motion for React.
+description: SVG writing animation inspired by Apple's "Hello" screen.
 image: https://assets.chanhdai.com/images/blog/writing-effect-inspired-by-apple.webp
 category: components
 icon: apple-hello-effect
