--- a/src/features/blog/content/code-block-command.mdx
+++ b/src/features/blog/content/code-block-command.mdx
@@ -1,6 +1,6 @@
 ---
 title: Code Block Command
-description: A code block command component for displaying installation commands with copy functionality.
+description: Display install commands with package manager switcher and copy button.
 image: https://assets.chanhdai.com/images/blog/code-block-command.webp
 category: components
 icon: code-block-command
