--- a/src/features/blog/content/consent-manager.mdx
+++ b/src/features/blog/content/consent-manager.mdx
@@ -1,6 +1,6 @@
 ---
 title: Consent Manager
-description: A React component for managing user consent for cookies and tracking in Next.js applications.
+description: Cookie and tracking consent banner for Next.js, built on c15t.
 image: https://assets.chanhdai.com/images/blog/consent-manager.webp
 category: components
 icon: consent-manager
@@ -40,11 +40,11 @@ updatedAt: 2025-12-16
   </Testimonial>
 </a>
 
-## About
+## Features
 
 - Built on top of [c15t](https://c15t.com/docs/frameworks/next/quickstart).
-- Default theme is customized to match [shadcn/ui](https://ui.shadcn.com/docs/theming).
-- For Next.js, but can be easily adapted to other frameworks following [c15t's documentation](https://c15t.com).
+- Theme customized to match [shadcn/ui](https://ui.shadcn.com/docs/theming).
+- Designed for Next.js, adaptable to other frameworks via [c15t docs](https://c15t.com).
 
 ## Installation
 
