--- a/src/features/blog/content/copy-button.mdx
+++ b/src/features/blog/content/copy-button.mdx
@@ -17,10 +17,10 @@ updatedAt: 2026-02-20
 
 ## Features
 
-- **Smooth icon transitions**: Animated state changes using Motion
-- **Visual feedback**: Three distinct states - idle, success, error
-- **Flexible text input**: String or function for dynamic content
-- **Callback support**: Handlers for success and error events
+- Smooth icon transitions with animated state changes using Motion.
+- Visual feedback with three distinct states: idle, success, and error.
+- Accepts a string or function for dynamic content.
+- Callback support for success and error events.
 
 ## Installation
 
