--- a/src/features/blog/content/github-stars.mdx
+++ b/src/features/blog/content/github-stars.mdx
@@ -1,6 +1,6 @@
 ---
 title: GitHub Stars
-description: Display GitHub repository star count with formatted numbers and a tooltip showing the full count.
+description: Display GitHub repo star count with formatted numbers and full-count tooltip.
 image: https://assets.chanhdai.com/images/blog/github-stars.webp
 category: components
 icon: github-stars
