--- a/src/features/blog/content/react-wheel-picker.mdx
+++ b/src/features/blog/content/react-wheel-picker.mdx
@@ -14,16 +14,14 @@ updatedAt: 2026-02-08
   codeCollapsible
 />
 
-## About
+## Features
 
-The Wheel Picker component is built on top of [React Wheel Picker](https://react-wheel-picker.chanhdai.com).
+Built on top of [React Wheel Picker](https://react-wheel-picker.chanhdai.com).
 
-- 📱 Natural touch scrolling with smooth inertia effect
-- 🖱️ Mouse drag and scroll support for desktop
-- 🔄 Infinite loop scrolling
-- 🎨 Unstyled components for complete style customization
-- ⌨️ Full keyboard navigation and type-ahead search
-- ⚡️ Easy installation via shadcn CLI
+- Natural touch scrolling with smooth inertia, mouse drag and scroll for desktop.
+- Infinite loop scrolling.
+- Unstyled core for complete style customization.
+- Full keyboard navigation and type-ahead search.
 
 ## Installation
 
