--- a/src/features/blog/content/scroll-fade-effect.mdx
+++ b/src/features/blog/content/scroll-fade-effect.mdx
@@ -1,6 +1,6 @@
 ---
 title: Scroll Fade Effect
-description: A React component that adds a fade effect to content as you scroll.
+description: Fade content edges as you scroll, for both vertical and horizontal layouts.
 image: https://assets.chanhdai.com/images/blog/scroll-fade-effect.webp
 category: components
 icon: scroll-fade-effect
