--- a/src/features/blog/content/testimonial.mdx
+++ b/src/features/blog/content/testimonial.mdx
@@ -1,6 +1,6 @@
 ---
 title: Testimonial
-description: A testimonial component for displaying user feedback with author information and verified badge.
+description: Display user feedback with author info, avatar, and verified badge.
 image: https://assets.chanhdai.com/images/blog/testimonial.webp
 category: components
 icon: testimonial
