--- a/src/features/blog/content/testimonials-marquee.mdx
+++ b/src/features/blog/content/testimonials-marquee.mdx
@@ -1,6 +1,6 @@
 ---
 title: Testimonials Marquee
-description: A testimonials marquee component for showcasing user feedback in a scrolling format.
+description: Scrolling marquee to showcase user testimonials.
 image: https://assets.chanhdai.com/images/blog/testimonials-marquee.webp?v=2
 category: components
 icon: testimonials-marquee
@@ -14,6 +14,12 @@ updatedAt: 2025-11-22
   openInV0Url="https://chanhdai.com/r/testimonials-marquee.json"
   codeCollapsible
 />
+
+## Features
+
+- Continuous scrolling marquee with fade edges.
+- Single and multiple row layouts.
+- Composable with the Testimonial component.
 
 ## Installation
 
