--- a/src/features/blog/content/text-flip.mdx
+++ b/src/features/blog/content/text-flip.mdx
@@ -1,6 +1,6 @@
 ---
 title: Text Flip
-description: Animated text component that cycles through items with a smooth flip transition built with Motion for React.
+description: Animated text that cycles through items with a smooth flip transition.
 image: https://assets.chanhdai.com/images/blog/text-flip.webp
 category: components
 icon: text-flip
