--- a/src/features/blog/content/work-experience.mdx
+++ b/src/features/blog/content/work-experience.mdx
@@ -1,6 +1,6 @@
 ---
 title: Work Experience
-description: Displays a list of work experiences with role details and durations.
+description: Display work experiences with role details, company logos, and durations.
 image: https://assets.chanhdai.com/images/blog/work-experience-component.webp?t=1750149861
 category: components
 icon: work-experience
@@ -15,6 +15,13 @@ updatedAt: 2026-02-20
   codeCollapsible
   prose
 />
+
+## Features
+
+- Supports multiple positions per company.
+- Markdown rendering for position descriptions.
+- Animated expand/collapse with smooth transitions.
+- Company logos and duration display.
 
 ## Installation
 
