--- a/src/features/blog/content/shimmering-text.mdx
+++ b/src/features/blog/content/shimmering-text.mdx
@@ -1,6 +1,6 @@
 ---
 title: Shimmering Text
-description: Smooth shimmering text animation built with Motion.
+description: Smooth, light-sweeping shimmer animation for text.
 image: https://assets.chanhdai.com/images/blog/shimmering-text.webp
 category: components
 icon: shimmering-text
