--- a/src/features/blog/content/slide-to-unlock.mdx
+++ b/src/features/blog/content/slide-to-unlock.mdx
@@ -1,6 +1,6 @@
 ---
 title: Slide to Unlock
-description: A sleek, interactive slider inspired by the classic iPhone OS "slide to unlock" gesture.
+description: Interactive slider inspired by the classic iPhone "slide to unlock" gesture.
 image: https://assets.chanhdai.com/images/blog/slide-to-unlock.webp
 category: components
 icon: slide-to-unlock
@@ -38,6 +38,13 @@ updatedAt: 2026-02-20
 
   </Testimonial>
 </a>
+
+## Features
+
+- Smooth drag interaction with spring physics via Motion.
+- Composable compound components (track, handle, text).
+- Customizable handle and colors.
+- Built-in shimmering text effect.
 
 ## Installation
 
